tests/errors/semantics/recursive_struct_array.odl
main :: () -> void {
    foo_t :: struct {
        foos: [2]foo_t;
    };

    foo_t.{};
};
